[package]
name = "sqlx-sqlite-cipher"
documentation = "https://docs.rs/sqlx"
description = "SQLite driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version = "0.7.5"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = [
  "ha421 <hha835773@gmail.com>",
  "Sqlx authors",
  "rusqlite authors"
]
homepage = "https://github.com/HaHa421/sqlx-sqlite-cipher"
repository = "https://github.com/HaHa421/sqlx-sqlite-cipher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "chrono" , "migrate" ]
any = ["sqlx-core/any"]
json = ["sqlx-core/json"]
offline = ["sqlx-core/offline"]
migrate = ["sqlx-core/migrate"]

chrono = ["dep:chrono"]
regexp = ["dep:regex"]

sqlcipher = [ "libsqlite3-sys/sqlcipher" ]
bundled-sqlcipher = [ "libsqlite3-sys/bundled-sqlcipher" , "sqlcipher" ]
bundled-sqlcipher-vendored-openssl = [ "libsqlite3-sys/bundled-sqlcipher-vendored-openssl"  , "sqlcipher" ]

[dependencies]
futures-core = { version = "0.3.19", default-features = false }
futures-channel = { version = "0.3.19", default-features = false, features = ["sink", "alloc", "std"] }
# used by the SQLite worker thread to block on the async mutex that locks the database handle
futures-executor = { version = "0.3.19" }
futures-intrusive = "0.5.0"
futures-util = { version = "0.3.19", default-features = false, features = ["alloc", "sink"] }

chrono = { version = "0.4.22", default-features = false , optional = true }
time = { version = "0.3.14", features = ["formatting", "parsing", "macros"] , optional = true }
uuid = { version = "1.1.2" , optional = true }

url = { version = "2.2.2", default-features = false }
percent-encoding = "2.1.0"

flume = { version = "0.11.0", default-features = false, features = ["async"] }

atoi = "2.0"

log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }

serde = { version = "1.0.145", features = ["derive"] }
regex = { version = "1.5.5", optional = true }
urlencoding = "2.1.3"

state = { version = "0.6" , features = [ "tls" ] }
dashmap = "5"

[dependencies.libsqlite3-sys]
version = "0.27.0"
default-features = false
features = [
    "pkg-config",
    "vcpkg",
    "bundled",
    "unlock_notify"
]

[dependencies.sqlx-core]
version = "0.7"

[dev-dependencies]
sqlx = { version = "0.7" , default-features = false, features = ["macros", "runtime-tokio", "tls-none"] }
